--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
-    "react-bootstrap": "^2.0.0-beta.6"
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-select": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
