--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "enCapsule",
-  "name": "Digitize your wardrobe with Encapsule",
+  "name": "Digitize your wardrobe with enCapsule",
   "icons": [
     {
       "src": "favicon.ico",
